# claudio-v2

./: .gitignore  claudio.service  config.example.json  pyproject.toml
claudio/: config.py  main.py  stt_tts.py
claudio/audit/: __init__.py  agent_mesh.py  runlog.py  runs_db.py
claudio/channels/: chatapi.py  mcp_server.py  telegram.py
claudio/core/: classifier.py  context.py  executor.py  model_manager.py  session.py  tools.py
claudio/cron/: fast_parse.py  scheduler.py  store.py
claudio/memory/: __init__.py  agent_mesh.py  cleanup.py  conflict.py  extraction.py  kuzu_search.py  migration.py  retrieval.py
claudio/security/: profiles.py
docs/: ARCHITECTURE.md  PRD.md  SPEC.md
