[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claudio"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "mem0ai>=0.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "mcp>=1.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[project.scripts]
claudio = "claudio.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudio*"]
